--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,16 @@ body {
     font-family: "Rubik", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-  margin: 0;
+  margin: 20px;
   padding: 0;
   background-color: #DFD9E2; /* Light background color */
 }
+
+  h1 {
+    text-align: center;
+    margin-top: 50px;
+  }
+ 
 
 /* Heading styles */
 h1,
@@ -63,13 +69,54 @@ button {
   color: #fff;
   background-color: #89909F; /* Primary button color */
   border: none;
-  border-radius: 3px;
+  border-radius: 5px;
   cursor: pointer;
 }
 
 button:hover {
   background-color: #0056b3; /* Darker shade on hover */
 }
+
+div {
+    margin: 0 auto;
+    width: 80%;
+    padding: 20px;
+    font-size: 1.2em;
+    line-height: 1.6em;
+  }
+
+  .holder {
+    display: flex;
+  }
+
+  .steps {
+    width: 40%;
+  }
+
+  #chart {
+    width: 50%;
+    margin-right: 5px;
+    position: sticky;
+    top: 0px;
+    left: 0px;
+    width: 400px;
+    height: 400px;
+  }
+
+  #chart-0-container {
+    width: 50%;
+    margin-right: 5px;
+    position: sticky;
+    top: 0px;
+    left: 0px;
+    width: 400px;
+    height: 400px;
+  }
+
+  .step {
+    margin-top: 50px;
+    min-height: 600px;
+  }
 
 /* Section styles */
 section {
