--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,23 @@
 /* Body styles */
 body {
-    font-family: "Rubik", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
+  font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
   margin: 20px;
   padding: 0;
-  background-color: #DFD9E2; /* Light background color */
+  color: white;
+  background-color: black; /* Light background color */
 }
-
-  h1 {
-    text-align: center;
-    margin-top: 50px;
-  }
- 
 
 /* Heading styles */
 h1,
 h2,
 h3 {
-    font-family: "Rubik", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: bold;
-    font-style: normal;
-  color: black; /* Dark color for headings */
+  font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+  color: white; /* Dark color for headings */
   margin-top: 30px;
   margin-bottom: 20px;
 }
@@ -31,20 +26,21 @@ h3 {
 .container {
   max-width: 960px;
   margin: 0 auto;
+  border: 1px solid gray;
   padding: 20px;
-  background-color: #fff; /* White background for containers */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Light box shadow */
+  background-color: #1f2124;
+  box-shadow: 0 0 30px #1f2124;
   border-radius: 5px;
 }
 
 /* Form styles */
 .form-group {
-  margin-bottom: 20px;
+  margin: 1em;
 }
 
 label {
   display: block;
-  font-weight: bold;
+  font-weight: light;
   margin-bottom: 5px;
 }
 
@@ -52,8 +48,9 @@ input[type="text"],
 input[type="email"],
 textarea {
   width: 100%;
-  padding: 10px;
+  padding: 0.5em;
   font-size: 1em;
+  margin: 1em;
   border: 1px solid #ccc;
   border-radius: 3px;
 }
@@ -63,60 +60,63 @@ button {
   font-family: "Rubik", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  padding: .5em;
+  padding: 0.5em;
   font-size: 1em;
-  font-weight: light;
-  color: #fff;
-  background-color: #89909F; /* Primary button color */
-  border: none;
+  font-weight: lightest;
+  color: #5ce6bc;
+  background-color: black; /* Primary button color */
+  border: 1px solid #5ce6bc;
+
   border-radius: 5px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #0056b3; /* Darker shade on hover */
+  background-color: white;
+  color: black;
+  border: 1px solid black;
 }
 
 div {
-    margin: 0 auto;
-    width: 80%;
-    padding: 20px;
-    font-size: 1.2em;
-    line-height: 1.6em;
-  }
+  margin: 0 auto;
+  width: 80%;
+  padding: 20px;
+  font-size: 1.2em;
+  line-height: 1.6em;
+}
 
-  .holder {
-    display: flex;
-  }
+.holder {
+  display: flex;
+}
 
-  .steps {
-    width: 40%;
-  }
+.steps {
+  width: 40%;
+}
 
-  #chart {
-    width: 50%;
-    margin-right: 5px;
-    position: sticky;
-    top: 0px;
-    left: 0px;
-    width: 400px;
-    height: 400px;
-  }
+#chart {
+  width: 50%;
+  margin-right: 5px;
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  width: 400px;
+  height: 400px;
+}
 
-  #chart-0-container {
-    width: 50%;
-    margin-right: 5px;
-    position: sticky;
-    top: 0px;
-    left: 0px;
-    width: 400px;
-    height: 400px;
-  }
+#chart-0-container {
+  width: 50%;
+  margin-right: 5px;
+  position: sticky;
+  top: 0px;
+  left: 0px;
+  width: 400px;
+  height: 400px;
+}
 
-  .step {
-    margin-top: 50px;
-    min-height: 600px;
-  }
+.step {
+  margin-top: 50px;
+  min-height: 600px;
+}
 
 /* Section styles */
 section {
