--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ h3 {
 /* Container styles */
 .container {
   max-width: 960px;
-  margin: 0 auto;
   border: 1px solid gray;
   padding: 20px;
   background-color: #1f2124;
@@ -39,6 +38,7 @@ h3 {
   font-weight: 300;
   font-style: normal;
 }
+
 
 label {
   display: block;
@@ -85,12 +85,12 @@ button {
   font-weight: 300;
   font-style: normal;
   padding: 0.5em;
+  margin-top: 1em;
   font-size: 1em;
   font-weight: lightest;
   color: #5ce6bc;
   background-color: black; /* Primary button color */
   border: 1px solid #5ce6bc;
-
   border-radius: 5px;
   cursor: pointer;
 }
