--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,6 @@ section {
 
 
   .step {
-    
     opacity: 0; /* Initially hide all steps */
     transition: opacity .5s ease; /* Smooth transition for opacity changes */
     position: relative;
@@ -192,21 +191,11 @@ section {
     margin-top: 50vh; /* Ensure there's enough space for the step to fully enter the viewport */
     margin-bottom: 50vh;
     box-shadow: 20px 20px 60px 60px black;
-    min-height: 40%;
     padding: 0;
     z-index: 1; /* Ensure the step elements are properly layered */
   }
   .step.active {
-    opacity: 1; /* Initially hide all steps */
-    position: relative;
-    background-color: black;
-    margin-top: 50vh; /* Ensure there's enough space for the step to fully enter the viewport */
-    margin-bottom: 50vh;
-    /* box-shadow: 20px 20px 60px 60px black; */
-    min-height: 20%;
-    padding: 0;
-    z-index: 1; /* Ensure the step elements are properly layered */
-  }
+    opacity: 1;
 
   #chart-0-container {
     margin-top: 20px;
